--- a/letschat/pubspec.yaml
+++ b/letschat/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^3.6.3
   cloud_firestore: ^3.4.4
   modal_progress_hud_nsn: ^0.3.0
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
